// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test expressions fix #137 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": List {
        "arguments": Array [
          null,
          null,
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 9,
                "line": 1,
                "offset": 9,
              },
              "source": null,
              "start": Position {
                "column": 7,
                "line": 1,
                "offset": 7,
              },
            },
            "value": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "loc": Location {
                "end": Position {
                  "column": 9,
                  "line": 1,
                  "offset": 9,
                },
                "source": null,
                "start": Position {
                  "column": 7,
                  "line": 1,
                  "offset": 7,
                },
              },
              "name": "a",
            },
          },
          null,
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 13,
                "line": 1,
                "offset": 13,
              },
              "source": null,
              "start": Position {
                "column": 11,
                "line": 1,
                "offset": 11,
              },
            },
            "value": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "loc": Location {
                "end": Position {
                  "column": 13,
                  "line": 1,
                  "offset": 13,
                },
                "source": null,
                "start": Position {
                  "column": 11,
                  "line": 1,
                  "offset": 11,
                },
              },
              "name": "b",
            },
          },
        ],
        "kind": "list",
        "loc": Location {
          "end": Position {
            "column": 14,
            "line": 1,
            "offset": 14,
          },
          "source": null,
          "start": Position {
            "column": 0,
            "line": 1,
            "offset": 0,
          },
        },
        "shortForm": false,
      },
      "loc": Location {
        "end": Position {
          "column": 36,
          "line": 1,
          "offset": 36,
        },
        "source": null,
        "start": Position {
          "column": 0,
          "line": 1,
          "offset": 0,
        },
      },
      "operator": "=",
      "right": Array {
        "items": Array [
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 22,
                "line": 1,
                "offset": 22,
              },
              "source": null,
              "start": Position {
                "column": 18,
                "line": 1,
                "offset": 18,
              },
            },
            "value": ConstRef {
              "kind": "constref",
              "loc": Location {
                "end": Position {
                  "column": 22,
                  "line": 1,
                  "offset": 22,
                },
                "source": null,
                "start": Position {
                  "column": 18,
                  "line": 1,
                  "offset": 18,
                },
              },
              "name": Identifier {
                "kind": "identifier",
                "loc": Location {
                  "end": Position {
                    "column": 22,
                    "line": 1,
                    "offset": 22,
                  },
                  "source": null,
                  "start": Position {
                    "column": 18,
                    "line": 1,
                    "offset": 18,
                  },
                },
                "name": "null",
                "resolution": "uqn",
              },
            },
          },
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 25,
                "line": 1,
                "offset": 25,
              },
              "source": null,
              "start": Position {
                "column": 24,
                "line": 1,
                "offset": 24,
              },
            },
            "value": Number {
              "kind": "number",
              "loc": Location {
                "end": Position {
                  "column": 25,
                  "line": 1,
                  "offset": 25,
                },
                "source": null,
                "start": Position {
                  "column": 24,
                  "line": 1,
                  "offset": 24,
                },
              },
              "value": "1",
            },
          },
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 31,
                "line": 1,
                "offset": 31,
              },
              "source": null,
              "start": Position {
                "column": 27,
                "line": 1,
                "offset": 27,
              },
            },
            "value": ConstRef {
              "kind": "constref",
              "loc": Location {
                "end": Position {
                  "column": 31,
                  "line": 1,
                  "offset": 31,
                },
                "source": null,
                "start": Position {
                  "column": 27,
                  "line": 1,
                  "offset": 27,
                },
              },
              "name": Identifier {
                "kind": "identifier",
                "loc": Location {
                  "end": Position {
                    "column": 31,
                    "line": 1,
                    "offset": 31,
                  },
                  "source": null,
                  "start": Position {
                    "column": 27,
                    "line": 1,
                    "offset": 27,
                  },
                },
                "name": "null",
                "resolution": "uqn",
              },
            },
          },
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 34,
                "line": 1,
                "offset": 34,
              },
              "source": null,
              "start": Position {
                "column": 33,
                "line": 1,
                "offset": 33,
              },
            },
            "value": Number {
              "kind": "number",
              "loc": Location {
                "end": Position {
                  "column": 34,
                  "line": 1,
                  "offset": 34,
                },
                "source": null,
                "start": Position {
                  "column": 33,
                  "line": 1,
                  "offset": 33,
                },
              },
              "value": "2",
            },
          },
        ],
        "kind": "array",
        "loc": Location {
          "end": Position {
            "column": 35,
            "line": 1,
            "offset": 35,
          },
          "source": null,
          "start": Position {
            "column": 17,
            "line": 1,
            "offset": 17,
          },
        },
        "shortForm": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 36,
      "line": 1,
      "offset": 36,
    },
    "source": null,
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`Test expressions fix #150 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": List {
        "arguments": Array [
          Entry {
            "key": String {
              "isDoubleQuote": false,
              "kind": "string",
              "raw": "'foo'",
              "value": "foo",
            },
            "kind": "entry",
            "value": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "bar",
            },
          },
        ],
        "kind": "list",
        "shortForm": false,
      },
      "operator": "=",
      "right": Array {
        "items": Array [
          Entry {
            "key": String {
              "isDoubleQuote": false,
              "kind": "string",
              "raw": "'foo'",
              "value": "foo",
            },
            "kind": "entry",
            "value": String {
              "isDoubleQuote": false,
              "kind": "string",
              "raw": "'bar'",
              "value": "bar",
            },
          },
        ],
        "kind": "array",
        "shortForm": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions should assign class static 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
        "what": Identifier {
          "kind": "identifier",
          "name": "a",
          "resolution": "uqn",
        },
      },
      "operator": "=",
      "right": Number {
        "kind": "number",
        "value": "1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions should fail to assign class constants 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": StaticLookup {
        "kind": "staticlookup",
        "offset": ConstRef {
          "kind": "constref",
          "name": "b",
        },
        "what": Identifier {
          "kind": "identifier",
          "name": "foo",
          "resolution": "uqn",
        },
      },
      "operator": "=",
      "right": Number {
        "kind": "number",
        "value": "1",
      },
    },
  ],
  "errors": Array [
    Error {
      "expected": "VARIABLE",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '=' on line 1",
      "token": "'='",
    },
  ],
  "kind": "program",
}
`;

exports[`Test expressions should fail to assign constants 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": ConstRef {
        "kind": "constref",
        "name": Identifier {
          "kind": "identifier",
          "name": "a",
          "resolution": "uqn",
        },
      },
      "operator": "=",
      "right": Number {
        "kind": "number",
        "value": "1",
      },
    },
  ],
  "errors": Array [
    Error {
      "expected": "VARIABLE",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '=' on line 1",
      "token": "'='",
    },
  ],
  "kind": "program",
}
`;

exports[`Test expressions test assignements 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": ".=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "+=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "-=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "*=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "**=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "/=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "&=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "|=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "%=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "^=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "<<=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": ">>=",
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test binary 1`] = `
Program {
  "children": Array [
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "|",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "&",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "^",
    },
    Bin {
      "kind": "bin",
      "left": String {
        "isDoubleQuote": true,
        "kind": "string",
        "raw": "\\"1\\"",
        "value": "1",
      },
      "right": String {
        "isDoubleQuote": true,
        "kind": "string",
        "raw": "\\"3\\"",
        "value": "3",
      },
      "type": ".",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "+",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "-",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "*",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "/",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "%",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "**",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": "<<",
    },
    Bin {
      "kind": "bin",
      "left": Number {
        "kind": "number",
        "value": "1",
      },
      "right": Number {
        "kind": "number",
        "value": "3",
      },
      "type": ">>",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test cast 1`] = `
Program {
  "children": Array [
    Cast {
      "kind": "cast",
      "type": "int",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "int",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "bool",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "bool",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "float",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "float",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "float",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "string",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "array",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "object",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Cast {
      "kind": "cast",
      "type": "unset",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test exit 1`] = `
Program {
  "children": Array [
    Exit {
      "kind": "exit",
      "status": Number {
        "kind": "number",
        "value": "1",
      },
      "useDie": false,
    },
    Exit {
      "kind": "exit",
      "status": null,
      "useDie": true,
    },
    Exit {
      "kind": "exit",
      "status": null,
      "useDie": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test generators 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [],
      "body": Block {
        "children": Array [
          Yield {
            "key": null,
            "kind": "yield",
            "value": Number {
              "kind": "number",
              "value": "0",
            },
          },
          YieldFrom {
            "kind": "yieldfrom",
            "value": Call {
              "arguments": Array [],
              "kind": "call",
              "what": Identifier {
                "kind": "identifier",
                "name": "foo",
                "resolution": "uqn",
              },
            },
          },
          Yield {
            "key": Number {
              "kind": "number",
              "value": "1",
            },
            "kind": "yield",
            "value": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
          },
        ],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": "gen",
      "nullable": false,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test if based returns 1`] = `
Program {
  "children": Array [
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Boolean {
        "kind": "boolean",
        "raw": "false",
        "value": false,
      },
      "type": "??",
    },
    RetIf {
      "falseExpr": Boolean {
        "kind": "boolean",
        "raw": "false",
        "value": false,
      },
      "kind": "retif",
      "test": Bin {
        "kind": "bin",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "right": Number {
          "kind": "number",
          "value": "5",
        },
        "type": ">",
      },
      "trueExpr": Boolean {
        "kind": "boolean",
        "raw": "true",
        "value": true,
      },
    },
    RetIf {
      "falseExpr": Boolean {
        "kind": "boolean",
        "raw": "false",
        "value": false,
      },
      "kind": "retif",
      "test": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "trueExpr": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test incr/decr 1`] = `
Program {
  "children": Array [
    Post {
      "kind": "post",
      "loc": Location {
        "end": Position {
          "column": 11,
          "line": 2,
          "offset": 12,
        },
        "source": null,
        "start": Position {
          "column": 6,
          "line": 2,
          "offset": 7,
        },
      },
      "type": "+",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 8,
            "line": 2,
            "offset": 9,
          },
          "source": null,
          "start": Position {
            "column": 6,
            "line": 2,
            "offset": 7,
          },
        },
        "name": "i",
      },
    },
    Post {
      "kind": "post",
      "loc": Location {
        "end": Position {
          "column": 11,
          "line": 3,
          "offset": 24,
        },
        "source": null,
        "start": Position {
          "column": 6,
          "line": 3,
          "offset": 19,
        },
      },
      "type": "-",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 8,
            "line": 3,
            "offset": 21,
          },
          "source": null,
          "start": Position {
            "column": 6,
            "line": 3,
            "offset": 19,
          },
        },
        "name": "i",
      },
    },
    Pre {
      "kind": "pre",
      "loc": Location {
        "end": Position {
          "column": 11,
          "line": 4,
          "offset": 36,
        },
        "source": null,
        "start": Position {
          "column": 6,
          "line": 4,
          "offset": 31,
        },
      },
      "type": "+",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 10,
            "line": 4,
            "offset": 35,
          },
          "source": null,
          "start": Position {
            "column": 8,
            "line": 4,
            "offset": 33,
          },
        },
        "name": "i",
      },
    },
    Pre {
      "kind": "pre",
      "loc": Location {
        "end": Position {
          "column": 11,
          "line": 5,
          "offset": 48,
        },
        "source": null,
        "start": Position {
          "column": 6,
          "line": 5,
          "offset": 43,
        },
      },
      "type": "-",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "loc": Location {
          "end": Position {
            "column": 10,
            "line": 5,
            "offset": 47,
          },
          "source": null,
          "start": Position {
            "column": 8,
            "line": 5,
            "offset": 45,
          },
        },
        "name": "i",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 11,
      "line": 5,
      "offset": 48,
    },
    "source": null,
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`Test expressions test list statements 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": List {
        "arguments": Array [
          Entry {
            "key": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "loc": Location {
                "end": Position {
                  "column": 7,
                  "line": 1,
                  "offset": 7,
                },
                "source": null,
                "start": Position {
                  "column": 5,
                  "line": 1,
                  "offset": 5,
                },
              },
              "name": "a",
            },
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 27,
                "line": 1,
                "offset": 27,
              },
              "source": null,
              "start": Position {
                "column": 5,
                "line": 1,
                "offset": 5,
              },
            },
            "value": List {
              "arguments": Array [
                Entry {
                  "key": null,
                  "kind": "entry",
                  "loc": Location {
                    "end": Position {
                      "column": 18,
                      "line": 1,
                      "offset": 18,
                    },
                    "source": null,
                    "start": Position {
                      "column": 16,
                      "line": 1,
                      "offset": 16,
                    },
                  },
                  "value": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "loc": Location {
                      "end": Position {
                        "column": 18,
                        "line": 1,
                        "offset": 18,
                      },
                      "source": null,
                      "start": Position {
                        "column": 16,
                        "line": 1,
                        "offset": 16,
                      },
                    },
                    "name": "c",
                  },
                },
                Entry {
                  "key": null,
                  "kind": "entry",
                  "loc": Location {
                    "end": Position {
                      "column": 21,
                      "line": 1,
                      "offset": 21,
                    },
                    "source": null,
                    "start": Position {
                      "column": 19,
                      "line": 1,
                      "offset": 19,
                    },
                  },
                  "value": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "loc": Location {
                      "end": Position {
                        "column": 21,
                        "line": 1,
                        "offset": 21,
                      },
                      "source": null,
                      "start": Position {
                        "column": 19,
                        "line": 1,
                        "offset": 19,
                      },
                    },
                    "name": "d",
                  },
                },
                null,
                Entry {
                  "key": null,
                  "kind": "entry",
                  "loc": Location {
                    "end": Position {
                      "column": 25,
                      "line": 1,
                      "offset": 25,
                    },
                    "source": null,
                    "start": Position {
                      "column": 23,
                      "line": 1,
                      "offset": 23,
                    },
                  },
                  "value": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "loc": Location {
                      "end": Position {
                        "column": 25,
                        "line": 1,
                        "offset": 25,
                      },
                      "source": null,
                      "start": Position {
                        "column": 23,
                        "line": 1,
                        "offset": 23,
                      },
                    },
                    "name": "e",
                  },
                },
                null,
              ],
              "kind": "list",
              "loc": Location {
                "end": Position {
                  "column": 27,
                  "line": 1,
                  "offset": 27,
                },
                "source": null,
                "start": Position {
                  "column": 11,
                  "line": 1,
                  "offset": 11,
                },
              },
              "shortForm": false,
            },
          },
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 31,
                "line": 1,
                "offset": 31,
              },
              "source": null,
              "start": Position {
                "column": 29,
                "line": 1,
                "offset": 29,
              },
            },
            "value": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "loc": Location {
                "end": Position {
                  "column": 31,
                  "line": 1,
                  "offset": 31,
                },
                "source": null,
                "start": Position {
                  "column": 29,
                  "line": 1,
                  "offset": 29,
                },
              },
              "name": "b",
            },
          },
        ],
        "kind": "list",
        "loc": Location {
          "end": Position {
            "column": 32,
            "line": 1,
            "offset": 32,
          },
          "source": null,
          "start": Position {
            "column": 0,
            "line": 1,
            "offset": 0,
          },
        },
        "shortForm": false,
      },
      "loc": Location {
        "end": Position {
          "column": 42,
          "line": 1,
          "offset": 42,
        },
        "source": null,
        "start": Position {
          "column": 0,
          "line": 1,
          "offset": 0,
        },
      },
      "operator": "=",
      "right": Array {
        "items": Array [
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 37,
                "line": 1,
                "offset": 37,
              },
              "source": null,
              "start": Position {
                "column": 36,
                "line": 1,
                "offset": 36,
              },
            },
            "value": Number {
              "kind": "number",
              "loc": Location {
                "end": Position {
                  "column": 37,
                  "line": 1,
                  "offset": 37,
                },
                "source": null,
                "start": Position {
                  "column": 36,
                  "line": 1,
                  "offset": 36,
                },
              },
              "value": "1",
            },
          },
          Entry {
            "key": null,
            "kind": "entry",
            "loc": Location {
              "end": Position {
                "column": 40,
                "line": 1,
                "offset": 40,
              },
              "source": null,
              "start": Position {
                "column": 39,
                "line": 1,
                "offset": 39,
              },
            },
            "value": Number {
              "kind": "number",
              "loc": Location {
                "end": Position {
                  "column": 40,
                  "line": 1,
                  "offset": 40,
                },
                "source": null,
                "start": Position {
                  "column": 39,
                  "line": 1,
                  "offset": 39,
                },
              },
              "value": "2",
            },
          },
        ],
        "kind": "array",
        "loc": Location {
          "end": Position {
            "column": 41,
            "line": 1,
            "offset": 41,
          },
          "source": null,
          "start": Position {
            "column": 35,
            "line": 1,
            "offset": 35,
          },
        },
        "shortForm": true,
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
  "loc": Location {
    "end": Position {
      "column": 42,
      "line": 1,
      "offset": 42,
    },
    "source": null,
    "start": Position {
      "column": 0,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`Test expressions test more binary ops (formerly bool) 1`] = `
Program {
  "children": Array [
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "&&",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "and",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "||",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "or",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "xor",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "===",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "!==",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "==",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "!=",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": ">",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "<",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": ">=",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "<=",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "<=>",
    },
    Bin {
      "kind": "bin",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "right": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "type": "instanceof",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test nested expressions precedence 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": Bin {
        "kind": "bin",
        "left": Bin {
          "kind": "bin",
          "left": Number {
            "kind": "number",
            "value": "5",
          },
          "right": Number {
            "kind": "number",
            "value": "2",
          },
          "type": "*",
        },
        "right": Number {
          "kind": "number",
          "value": "1",
        },
        "type": "+",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "b",
      },
      "operator": "=",
      "right": Bin {
        "kind": "bin",
        "left": Number {
          "kind": "number",
          "value": "5",
        },
        "right": Parenthesis {
          "inner": Bin {
            "kind": "bin",
            "left": Number {
              "kind": "number",
              "value": "2",
            },
            "right": Number {
              "kind": "number",
              "value": "1",
            },
            "type": "+",
          },
          "kind": "parenthesis",
        },
        "type": "*",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "c",
      },
      "operator": "=",
      "right": Bin {
        "kind": "bin",
        "left": Bin {
          "kind": "bin",
          "left": Number {
            "kind": "number",
            "value": "1",
          },
          "right": Bin {
            "kind": "bin",
            "left": Number {
              "kind": "number",
              "value": "2",
            },
            "right": Number {
              "kind": "number",
              "value": "3",
            },
            "type": "/",
          },
          "type": "+",
        },
        "right": Number {
          "kind": "number",
          "value": "4",
        },
        "type": "+",
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "d",
      },
      "operator": "=",
      "right": Bin {
        "kind": "bin",
        "left": Bin {
          "kind": "bin",
          "left": Number {
            "kind": "number",
            "value": "1",
          },
          "right": Number {
            "kind": "number",
            "value": "2",
          },
          "type": "!==",
        },
        "right": Number {
          "kind": "number",
          "value": "3",
        },
        "type": "&&",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test new 1`] = `
Program {
  "children": Array [
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": New {
        "arguments": Array [],
        "kind": "new",
        "what": Identifier {
          "kind": "identifier",
          "name": "\\\\foo",
          "resolution": "qn",
        },
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": New {
        "arguments": Array [],
        "kind": "new",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": ConstRef {
            "kind": "constref",
            "name": "class",
          },
          "what": Identifier {
            "kind": "identifier",
            "name": "foo",
            "resolution": "rn",
          },
        },
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": New {
        "arguments": Array [],
        "kind": "new",
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
      },
    },
    Assign {
      "kind": "assign",
      "left": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "a",
      },
      "operator": "=",
      "right": New {
        "arguments": Array [],
        "kind": "new",
        "what": Class {
          "body": Array [],
          "extends": Identifier {
            "kind": "identifier",
            "name": "foo",
            "resolution": "uqn",
          },
          "implements": Array [
            Identifier {
              "kind": "identifier",
              "name": "bar",
              "resolution": "uqn",
            },
          ],
          "isAbstract": false,
          "isAnonymous": true,
          "isFinal": false,
          "kind": "class",
          "name": null,
        },
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test silent 1`] = `
Program {
  "children": Array [
    Silent {
      "expr": Call {
        "arguments": Array [],
        "kind": "call",
        "what": Identifier {
          "kind": "identifier",
          "name": "trigger_error",
          "resolution": "uqn",
        },
      },
      "kind": "silent",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test expressions test unary 1`] = `
Program {
  "children": Array [
    Unary {
      "kind": "unary",
      "type": "+",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Unary {
      "kind": "unary",
      "type": "~",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Unary {
      "kind": "unary",
      "type": "!",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
    Unary {
      "kind": "unary",
      "type": "-",
      "what": Variable {
        "byref": false,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
